// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardRecirculation
    block={
        Object {
            "fields": Object {
              "card1Color": "foo",
              "card1Image": Object {
                "fields": Object {
                  "file": Object {
                    "url": "/foo",
                  },
                },
              },
              "card1Link": "foo",
              "card1Text": "foo",
              "card2Color": "foo",
              "card2Image": Object {
                "fields": Object {
                  "file": Object {
                    "url": "/foo",
                  },
                },
              },
              "card2Link": "foo",
              "card2Text": "foo",
            },
          }
    }
    fields={
        Object {
            "card1Color": "",
            "card1Image": Object {
              "fields": Object {
                "file": Object {
                  "url": "",
                },
                "title": "",
              },
              "sys": Object {
                "id": "",
              },
            },
            "card1Link": "",
            "card1Text": "",
            "card2Color": "",
            "card2Image": Object {
              "fields": Object {
                "file": Object {
                  "url": "",
                },
                "title": "",
              },
              "sys": Object {
                "id": "",
              },
            },
            "card2Link": "",
            "card2Text": "",
            "title": "",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="col-12 md-col-6 m1"
>
          <Button
                    className="text-white w100"
                    color="white-denim"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label=""
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    shadow={false}
                    to="foo"
                    type="button"
                    variant="style-none"
          >
                    <div
                              className="flex flex-column items-center justify-between p3 w100"
                    >
                              <Image
                                        alt=""
                                        bg={false}
                                        className="mt2"
                                        onImgLoad={[Function]}
                                        src="/foo?w=300&fm=png&q=90"
                                        style={Object {}}
                              />
                              <p
                                        className="py2"
                              >
                                        foo
                              </p>
                    </div>
          </Button>
</div>,
        <div
          className="col-12 md-col-6 m1"
>
          <Button
                    className="text-white w100"
                    color="white-denim"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label=""
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    shadow={false}
                    to="foo"
                    type="button"
                    variant="style-none"
          >
                    <div
                              className="flex flex-column items-center justify-between p3 w100"
                    >
                              <Image
                                        alt=""
                                        bg={false}
                                        className="mt2"
                                        onImgLoad={[Function]}
                                        src="/foo?w=300&fm=png&q=90"
                                        style={Object {}}
                              />
                              <p
                                        className="py2"
                              >
                                        foo
                              </p>
                    </div>
          </Button>
</div>,
      ],
      "className": "w100 p3 mt4 flex content-width mx-auto",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Button
            className="text-white w100"
            color="white-denim"
            disabled={false}
            fullWidth={false}
            hover="shadow"
            label=""
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            shadow={false}
            to="foo"
            type="button"
            variant="style-none"
>
            <div
                        className="flex flex-column items-center justify-between p3 w100"
            >
                        <Image
                                    alt=""
                                    bg={false}
                                    className="mt2"
                                    onImgLoad={[Function]}
                                    src="/foo?w=300&fm=png&q=90"
                                    style={Object {}}
                        />
                        <p
                                    className="py2"
                        >
                                    foo
                        </p>
            </div>
</Button>,
          "className": "col-12 md-col-6 m1",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <div
              className="flex flex-column items-center justify-between p3 w100"
>
              <Image
                            alt=""
                            bg={false}
                            className="mt2"
                            onImgLoad={[Function]}
                            src="/foo?w=300&fm=png&q=90"
                            style={Object {}}
              />
              <p
                            className="py2"
              >
                            foo
              </p>
</div>,
            "className": "text-white w100",
            "color": "white-denim",
            "disabled": false,
            "fullWidth": false,
            "hover": "shadow",
            "label": "",
            "onClick": [Function],
            "onMouseEnter": [Function],
            "onMouseLeave": [Function],
            "shadow": false,
            "to": "foo",
            "type": "button",
            "variant": "style-none",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Image
                  alt=""
                  bg={false}
                  className="mt2"
                  onImgLoad={[Function]}
                  src="/foo?w=300&fm=png&q=90"
                  style={Object {}}
/>,
                <p
                  className="py2"
>
                  foo
</p>,
              ],
              "className": "flex flex-column items-center justify-between p3 w100",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "",
                  "bg": false,
                  "children": null,
                  "className": "mt2",
                  "onImgLoad": [Function],
                  "src": "/foo?w=300&fm=png&q=90",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "foo",
                  "className": "py2",
                },
                "ref": null,
                "rendered": "foo",
                "type": "p",
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Button
            className="text-white w100"
            color="white-denim"
            disabled={false}
            fullWidth={false}
            hover="shadow"
            label=""
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            shadow={false}
            to="foo"
            type="button"
            variant="style-none"
>
            <div
                        className="flex flex-column items-center justify-between p3 w100"
            >
                        <Image
                                    alt=""
                                    bg={false}
                                    className="mt2"
                                    onImgLoad={[Function]}
                                    src="/foo?w=300&fm=png&q=90"
                                    style={Object {}}
                        />
                        <p
                                    className="py2"
                        >
                                    foo
                        </p>
            </div>
</Button>,
          "className": "col-12 md-col-6 m1",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <div
              className="flex flex-column items-center justify-between p3 w100"
>
              <Image
                            alt=""
                            bg={false}
                            className="mt2"
                            onImgLoad={[Function]}
                            src="/foo?w=300&fm=png&q=90"
                            style={Object {}}
              />
              <p
                            className="py2"
              >
                            foo
              </p>
</div>,
            "className": "text-white w100",
            "color": "white-denim",
            "disabled": false,
            "fullWidth": false,
            "hover": "shadow",
            "label": "",
            "onClick": [Function],
            "onMouseEnter": [Function],
            "onMouseLeave": [Function],
            "shadow": false,
            "to": "foo",
            "type": "button",
            "variant": "style-none",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Image
                  alt=""
                  bg={false}
                  className="mt2"
                  onImgLoad={[Function]}
                  src="/foo?w=300&fm=png&q=90"
                  style={Object {}}
/>,
                <p
                  className="py2"
>
                  foo
</p>,
              ],
              "className": "flex flex-column items-center justify-between p3 w100",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "",
                  "bg": false,
                  "children": null,
                  "className": "mt2",
                  "onImgLoad": [Function],
                  "src": "/foo?w=300&fm=png&q=90",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "foo",
                  "className": "py2",
                },
                "ref": null,
                "rendered": "foo",
                "type": "p",
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="col-12 md-col-6 m1"
>
            <Button
                        className="text-white w100"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label=""
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        shadow={false}
                        to="foo"
                        type="button"
                        variant="style-none"
            >
                        <div
                                    className="flex flex-column items-center justify-between p3 w100"
                        >
                                    <Image
                                                alt=""
                                                bg={false}
                                                className="mt2"
                                                onImgLoad={[Function]}
                                                src="/foo?w=300&fm=png&q=90"
                                                style={Object {}}
                                    />
                                    <p
                                                className="py2"
                                    >
                                                foo
                                    </p>
                        </div>
            </Button>
</div>,
          <div
            className="col-12 md-col-6 m1"
>
            <Button
                        className="text-white w100"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label=""
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        shadow={false}
                        to="foo"
                        type="button"
                        variant="style-none"
            >
                        <div
                                    className="flex flex-column items-center justify-between p3 w100"
                        >
                                    <Image
                                                alt=""
                                                bg={false}
                                                className="mt2"
                                                onImgLoad={[Function]}
                                                src="/foo?w=300&fm=png&q=90"
                                                style={Object {}}
                                    />
                                    <p
                                                className="py2"
                                    >
                                                foo
                                    </p>
                        </div>
            </Button>
</div>,
        ],
        "className": "w100 p3 mt4 flex content-width mx-auto",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Button
              className="text-white w100"
              color="white-denim"
              disabled={false}
              fullWidth={false}
              hover="shadow"
              label=""
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              shadow={false}
              to="foo"
              type="button"
              variant="style-none"
>
              <div
                            className="flex flex-column items-center justify-between p3 w100"
              >
                            <Image
                                          alt=""
                                          bg={false}
                                          className="mt2"
                                          onImgLoad={[Function]}
                                          src="/foo?w=300&fm=png&q=90"
                                          style={Object {}}
                            />
                            <p
                                          className="py2"
                            >
                                          foo
                            </p>
              </div>
</Button>,
            "className": "col-12 md-col-6 m1",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <div
                className="flex flex-column items-center justify-between p3 w100"
>
                <Image
                                alt=""
                                bg={false}
                                className="mt2"
                                onImgLoad={[Function]}
                                src="/foo?w=300&fm=png&q=90"
                                style={Object {}}
                />
                <p
                                className="py2"
                >
                                foo
                </p>
</div>,
              "className": "text-white w100",
              "color": "white-denim",
              "disabled": false,
              "fullWidth": false,
              "hover": "shadow",
              "label": "",
              "onClick": [Function],
              "onMouseEnter": [Function],
              "onMouseLeave": [Function],
              "shadow": false,
              "to": "foo",
              "type": "button",
              "variant": "style-none",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Image
                    alt=""
                    bg={false}
                    className="mt2"
                    onImgLoad={[Function]}
                    src="/foo?w=300&fm=png&q=90"
                    style={Object {}}
/>,
                  <p
                    className="py2"
>
                    foo
</p>,
                ],
                "className": "flex flex-column items-center justify-between p3 w100",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "alt": "",
                    "bg": false,
                    "children": null,
                    "className": "mt2",
                    "onImgLoad": [Function],
                    "src": "/foo?w=300&fm=png&q=90",
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "foo",
                    "className": "py2",
                  },
                  "ref": null,
                  "rendered": "foo",
                  "type": "p",
                },
              ],
              "type": "div",
            },
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Button
              className="text-white w100"
              color="white-denim"
              disabled={false}
              fullWidth={false}
              hover="shadow"
              label=""
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              shadow={false}
              to="foo"
              type="button"
              variant="style-none"
>
              <div
                            className="flex flex-column items-center justify-between p3 w100"
              >
                            <Image
                                          alt=""
                                          bg={false}
                                          className="mt2"
                                          onImgLoad={[Function]}
                                          src="/foo?w=300&fm=png&q=90"
                                          style={Object {}}
                            />
                            <p
                                          className="py2"
                            >
                                          foo
                            </p>
              </div>
</Button>,
            "className": "col-12 md-col-6 m1",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <div
                className="flex flex-column items-center justify-between p3 w100"
>
                <Image
                                alt=""
                                bg={false}
                                className="mt2"
                                onImgLoad={[Function]}
                                src="/foo?w=300&fm=png&q=90"
                                style={Object {}}
                />
                <p
                                className="py2"
                >
                                foo
                </p>
</div>,
              "className": "text-white w100",
              "color": "white-denim",
              "disabled": false,
              "fullWidth": false,
              "hover": "shadow",
              "label": "",
              "onClick": [Function],
              "onMouseEnter": [Function],
              "onMouseLeave": [Function],
              "shadow": false,
              "to": "foo",
              "type": "button",
              "variant": "style-none",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Image
                    alt=""
                    bg={false}
                    className="mt2"
                    onImgLoad={[Function]}
                    src="/foo?w=300&fm=png&q=90"
                    style={Object {}}
/>,
                  <p
                    className="py2"
>
                    foo
</p>,
                ],
                "className": "flex flex-column items-center justify-between p3 w100",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "alt": "",
                    "bg": false,
                    "children": null,
                    "className": "mt2",
                    "onImgLoad": [Function],
                    "src": "/foo?w=300&fm=png&q=90",
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "foo",
                    "className": "py2",
                  },
                  "ref": null,
                  "rendered": "foo",
                  "type": "p",
                },
              ],
              "type": "div",
            },
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CardRecirculation
    fields={
        Object {
            "card1Color": "",
            "card1Image": Object {
              "fields": Object {
                "file": Object {
                  "url": "",
                },
                "title": "",
              },
              "sys": Object {
                "id": "",
              },
            },
            "card1Link": "",
            "card1Text": "",
            "card2Color": "",
            "card2Image": Object {
              "fields": Object {
                "file": Object {
                  "url": "",
                },
                "title": "",
              },
              "sys": Object {
                "id": "",
              },
            },
            "card2Link": "",
            "card2Text": "",
            "title": "",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        null,
        null,
      ],
      "className": "w100 p3 mt4 flex content-width mx-auto",
    },
    "ref": null,
    "rendered": Array [
      null,
      null,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          null,
          null,
        ],
        "className": "w100 p3 mt4 flex content-width mx-auto",
      },
      "ref": null,
      "rendered": Array [
        null,
        null,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
